tests/NormalTests/paczka1/fuzzy1/29208497.err
Error in line 11: S156 S156 86,3
Error in line 20: W9OEHUK7gcb S93 97,2
Error in line 26: yGiG S28 920,3
Error in line 33: S156 A650 46,3
Error in line 29: yGiG S156 46,0
Error in line 38: S156 S156 -3,6
